test_scores/negative_dimers/features/P08621.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P08621.pkl.xz